--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "firebase-admin": "^12.0.0",
-    "geofire-common": "^6.0.0"
+    "geofire-common": "^6.0.0",
+    "geofirestore": "^5.2.0"
   }
 }
