--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,7 @@
 API_TOKEN=
-ENVIRONMENT="PROD" // "DEV"
-MODE="firestore" // "mongodb"
+ENVIRONMENT=DEV
+MODE=
+MONGO_HOST=
+MONGO_USER=
+MONGO_PASSWORD=
+MONGO_DB=
